--- a/GreenThumb.client/src/assets/scss/_variables.scss
+++ b/GreenThumb.client/src/assets/scss/_variables.scss
@@ -9,7 +9,7 @@ $dark: #313130;
 $grey: #cbcbcb;
 $dark-grey: #696969;
 $white: #fff;
-$light: #f8f9fa;
+$light: #E6E6E6;
 
 $colors: (
   "primary": $primary,
