--- a/GreenThumb.client/src/assets/scss/_variables.scss
+++ b/GreenThumb.client/src/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
-$body-bg: #e5e5e5;
+$body-bg: #FFDBB5;
 $primary: #0f9b0f;
-$secondary: #ff3697;
-$danger: #eb5757;
+$secondary: #D16014;
+$danger: #CB769E;
 $success: #27ae60;
 $warning: #ff7f50;
-$info: #00c9bd;
+$info: #FFDBB5;
 $dark: #313130;
 $grey: #cbcbcb;
 $dark-grey: #696969;
